fix balance updating